<resources>
    <string name="app_name">Calculator</string>
    <string name="enter_a_number">Enter a number</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="star">*</string>
    <string name="slash">/</string>
    <string name="percent">%</string>
    <string name="double_slash">//</string>
    <string name="actions">Actions:</string>
    <string name="zero">0</string>
    <string name="power">^</string>
</resources>