<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/zero"
        android:padding="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="end"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <EditText
            android:id="@+id/first_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_a_number"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:autofillHints="@string/enter_a_number"
            android:focusable="true"/>

        <EditText
            android:id="@+id/second_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_a_number"
            android:autofillHints="@string/enter_a_number"
            android:inputType="number"
            android:imeOptions="actionDone"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actions"
        android:textStyle="bold"
        android:textSize="28sp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_weight="2"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp" />

        <Button
            android:id="@+id/sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_weight="2"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"/>

        <Button
            android:id="@+id/mul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/star"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_weight="2"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/dev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/slash"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_weight="2"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"/>

        <Button
            android:id="@+id/rem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/percent"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_weight="2"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>

        <Button
            android:id="@+id/pow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/power"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_weight="2"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>

    </LinearLayout>

</LinearLayout>